배경 추가 설명

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 Content/AnimStarterPack/
 Content/FPS_Weapon_Bundle/
 Content/InfinityBladeEffects/
+Content/SuperGrid/
 
 ### UnrealEngine ###
 # Visual Studio 2015 user specific files
