캐릭터 조준 offset 추가

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ Content/AnimStarterPack/
 Content/FPS_Weapon_Bundle/
 Content/InfinityBladeEffects/
 Content/SuperGrid/
+Content/Asian_Village/
+Content/LPSDeluxe2TropicalEnvironment/
+Content/Stylized_PBR_Nature/
+Standard_trees/
 
 ### UnrealEngine ###
 # Visual Studio 2015 user specific files
