--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/_Game/Maps/Main.Main
 EditorStartupMap=/Game/_Game/Maps/Main.Main
+GlobalDefaultGameMode=/Game/_Game/Character/BP_GM.BP_GM_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
